# upf-2026-language-acquisition

./: .gitignore  .nojekyll  TODO.md  _quarto.yml  bibliography.bib  index.html  index.qmd  main.py  pyproject.toml  references.bib  style.css  upf-2026-neurocogdev.bib
_freeze/index/execute-results/: html.json
src/: figures.py  mbrola.py  youtube.py
